--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
-    height: 500vh;
-    margin: 0;
+input {
+    color: transparent;
+    text-shadow: 0 0 0 #2196f3;
 }
 
 /* Splash Screen */
@@ -37,6 +37,7 @@ body {
     bottom: -20px;
     opacity: 0;
     font-size: 2rem;
+    font-weight: 400;
 }
 
 .welcome.active {
@@ -50,6 +51,164 @@ body {
     opacity: 0;
     transition: ease-in-out 0.5s;
 }
+
+
+
+/* Off screen sidebar */
+.rela-block {
+    display: block;
+    position: relative;
+    text-align: center;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+.abs-cent-text {
+    position: absolute;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.abs-cent-text.near-top {
+    top: 15%;
+}
+.abs-cent-text.near-bottom {
+    top: 85%;
+}
+.ham-button-label {
+    position: absolute;
+    z-index: 100;
+    height: 48px;
+    width: 48px;
+    top: 50%;
+    left: 25px;
+    transform: translateY(-50%);
+    transition: 0.4s ease, top 0.4s 0.4s ease;
+}
+.ham-button-label .ham-bar {
+position: absolute;
+height: 2px;
+width: 66%;
+background-color: #111;
+left: 50%;
+transform: translateX(-50%);
+transition: 0.4s ease, transform 0.4s 0.4s ease, width 0.3s 0.4s ease;
+}
+.ham-button-label .ham-bar:nth-child(1) {
+top: 24%;
+}
+.ham-button-label .ham-bar:nth-child(2),
+.ham-button-label .ham-bar:nth-child(3) {
+top: 47%;
+}
+.ham-button-label .ham-bar:nth-child(4) {
+top: 71%;
+}
+#hamButton {
+display: none;
+}
+#hamButton:checked+ .ham-button-label {
+left: 325px;
+top: 95%;
+transition: 0.4s ease, left 0.4s 0.4s ease;
+}
+#hamButton:checked+ .ham-button-label .ham-bar {
+transition: 0.4s ease, width 0.3s ease;
+}
+#hamButton:checked+ .ham-button-label .ham-bar:nth-child(1),
+#hamButton:checked+ .ham-button-label .ham-bar:nth-child(4) {
+width: 0%;
+}
+#hamButton:checked+ .ham-button-label .ham-bar:nth-child(2) {
+transform: translateX(-50%) rotate(45deg);
+}
+#hamButton:checked+ .ham-button-label .ham-bar:nth-child(3) {
+transform: translateX(-50%) rotate(-45deg);
+}
+#hamButton:checked~ .off-screen-container {
+left: 0;
+transition: 0.4s ease, left 0.4s 0.4s ease;
+background-color: #fff;
+box-shadow: 0 0 24px 1px rgba(0,0,0,0.4);
+}
+#hamButton:checked~ .off-screen-container .side-block {
+left: 0;
+}
+#hamButton:checked~ .off-screen-container .side-block:nth-child(2) {
+transition: 0.4s ease, left 0.4s 0.55s ease, border 0.2s ease;
+}
+#hamButton:checked~ .off-screen-container .side-block:nth-child(3) {
+transition: 0.4s ease, left 0.4s 0.61s ease, border 0.2s ease;
+}
+#hamButton:checked~ .off-screen-container .side-block:nth-child(4) {
+transition: 0.4s ease, left 0.4s 0.67s ease, border 0.2s ease;
+}
+#hamButton:checked~ .off-screen-container .side-block:nth-child(5) {
+transition: 0.4s ease, left 0.4s 0.73s ease, border 0.2s ease;
+}
+#hamButton:checked~ .off-screen-container .side-bottom-text {
+bottom: 35px;
+transition: 0.4s ease, bottom 0.4s 1s ease;
+}
+.off-screen-container {
+    position: absolute;
+    z-index: 50;
+    top: 0;
+    left: -300px;
+    bottom: 0;
+    width: 20%;
+    text-align: center;
+
+    transition: 0.4s ease, background-color 0.4s 0.4s ease;
+}
+.side-block {
+    height: 10%;
+    width: 80%;
+    left: -400px;
+    margin: 0 auto 20px;
+    box-sizing: border-box;
+    background-color: #ccc;
+    font-weight: 500;
+    cursor: pointer;
+}
+.side-block:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 8px;
+    right: 0;
+    transition: 0.25s ease;
+    background: linear-gradient(to left, #111 50%, #ccc 50%);
+    background-size: 200% 100%;
+    background-position: left;
+}
+.side-block:hover::before {
+    background-position: right;
+}
+.side-bottom-text {
+    position: absolute;
+    bottom: -100px;
+    left: 45px;
+    text-align: left;
+    font-size: 13px;
+    letter-spacing: 2px;
+    line-height: 15px;
+    font-weight: 500;
+}
+.page-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-x: hidden;
+    box-sizing: border-box;
+    background: #c0bbb1;
+    background-size: 1920px 1080px;
+  }
+
+
 
 /* SVG CSS */
 svg {
@@ -94,4 +253,45 @@ p .background-text {
     font-size: 6em;
     position: relative;
     overflow: hidden;
+}
+
+
+
+/* Compatibility */
+@media screen and (max-height: 640px) {
+    .abs-cent-text.near-top {
+        right: 50px;
+    }
+    .ham-button-label {
+        transform: translateY(-50%) scale(0.75);
+    }
+    #hamButton:checked+ .ham-button-label {
+        top: 80%;
+    }
+    #hamButton:checked~ .off-screen-container .side-bottom-text {
+        bottom: -100px;
+    }
+}
+@media screen and (max-height: 440px) {
+    .side-block {
+      height: 8%;
+      width: 70%;
+      font-size: 14px;
+      line-height: 16px;
+      margin: 0 auto 10px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #hamButton:checked+ .ham-button-label {
+        left: 225px;
+        top: 95%;
+    }
+    #hamButton:checked~ .off-screen-container {
+        left: 0;
+        width: 300px;
+        transition: 0.4s ease, left 0.4s 0.4s ease, width 0.4s 0.4s ease;
+        background-color: #fff;
+        box-shadow: 0 0 24px 1px rgba(0,0,0,0.4);
+    }
 }
